--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title: Hanlin Cai
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
-
+url: https://github.com/Yjy20050126/Yjy20050126.github.io.git
 # Owner/author information
 owner:
   name: Hanlin Cai
