--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Hanlin Cai
+title: Kitty Yang
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
 url: https://github.com/Yjy20050126/Yjy20050126.github.io.git
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: Kitty Yang
+  avatar: 
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: hanlin.cai@ieee.org
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
