--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://github.com/Yjy20050126/Yjy20050126.github.io.git
 # Owner/author information
 owner:
   name: Kitty Yang
-  avatar: 
+  avatar: Fig1.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: 
   cv: 
