--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@ owner:
   name: Kitty Yang
   avatar: Fig1.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: 
-  cv: 
+  email: 2948917031@qq.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   github: Yjy20050126
   # facebook: caihanlin2002
